--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 Done by
 Léonie SAGBO <sagboleonie7@gmail.com>
+This project aims to bring student to build up their own a command interpreter to manage your AirBnB objects.
+
